# editor

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  appveyor.yml  editor.pro  editor2.pro  vcpkg.json
.github/workflows/: build-ubuntu.yml  build.yml
Project/: build_vs.cmd  setup_vcpkg.cmd
Project/VS2015/: ofed.sln  ofed.vcxproj  ofed.vcxproj.filters
Project/VS2017/: ofed.qrc  ofed.sln  ofed.ui  ofed.vcxproj  ofed.vcxproj.filters
Project/wxDevCPP/: ofed.dev  ofed.layout  ofedApp.rc
Project/wxDevCPP/Objects/Visual C++/: ofed_private.h  ofed_private.rc
Run/Data/: data_here.txt
Source/: DialogCreateMap.cpp  DialogCreateMap.h  DialogCreateMap.wxform  DialogListSprites.cpp  DialogListSprites.h  DialogListSprites.wxform  DialogToolboxSprites.cpp  DialogToolboxSprites.h  DialogToolboxSprites.wxform  DialogToolboxTiles.cpp  DialogToolboxTiles.h  DialogToolboxTiles.wxform  FrameOFED.cpp  FrameOFED.h  FrameOFED.wxform  OFED.cpp  OFED.hpp  PanelTileView.cpp  PanelTileView.h  PanelTileView.wxform  PanelToolboxSprite.cpp  PanelToolboxSprite.h  PanelToolboxSprite.wxform  PanelToolboxTile.cpp  PanelToolboxTile.h  PanelToolboxTile.wxform  Resource_PC_CD.cpp  Sprites.cpp  Sprites.hpp  Surface.cpp  Surface.hpp  WindowQT.cpp  WindowQT.hpp  gitver.hpp  main.cpp  ofed.hpp  ofedApp.cpp  ofedApp.h  stdafx.cpp  stdafx.hpp  (+1 more)
Source/Dialogs/: CampaignDialog.cpp  CampaignDialog.hpp  CampaignDialog.ui  MapView.cpp  MapView.hpp  MapView.ui  NewMapDialog.cpp  NewMapDialog.hpp  NewMapDialog.ui  ToolboxSprites.cpp  ToolboxSprites.hpp  ToolboxSprites.ui  ToolboxTiles.cpp  ToolboxTiles.hpp  ToolboxTiles.ui
Source/Models/: CampaignModel.cpp  CampaignModel.hpp  MissionModel.cpp  MissionModel.hpp  SpriteModel.cpp  SpriteModel.hpp
cmake/: windeployqt.cmake
